<resources>
    <string name="app_name">Simple Calculator</string>
    <string name="add">Add</string>
    <string name="enter_hint">Enter a number</string>
    <string name="substract">Substract</string>
    <string name="divide">Divide</string>
    <string name="multiply">Multiply</string>
    <string name="clearInputs">Clear Inputs</string>
    <string name="result">The answer will be here</string>
    <string name="invInput">Invalid input!</string>
    <string name="invDivision">Cannot divide by 0!</string>
</resources>
